--- a/index.html
+++ b/index.html
@@ -23,53 +23,10 @@
   <script src="js/vendor/angular-route.min.js"></script>
   <script src="js/app.js"></script>
 </head>
-<body>
+<body ng-app="TestMe">
 <div class="container">
-	<div class="row">
-		<h1>The User Interface Developer Test</h1>
-	</div>
-	<div class="well">
-		<div class="well">
-			<ul>
-				<li>This Page and results.html should be converted to AngularJS templates.</li>
-				<li>Add a select-all toggle for the checkbox list.</li>
-				<li>Select-all should be checked if all fields are checked, unchecked if all fields are unchecked and indeterminate if some are checked.</li>
-				<li>Sor the checkboxes by name</l>
-				<li>When submitting the form, if only "Language" is checked, then an error should appear stating &quot; Please choose more items! &quot;</li>
-				<li>Successfully submitting the form takes us to results.html and shows what the user submitted.</li>
-				<li>Maybe the page can look a little better?</li>
-				<p>Read the README.md</p>
-			</ul>
-		</div>
-	</div>
-	<form role="form">
-		<div class="form-group">
-			<input type="checkbox">Select All
-		</div>
-		<div class="form-group">
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Abstract">Abstract
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Abstract">Publication
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" value="Abstract">Inventor
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Abstract">Language
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="field" value="Abstract">Source
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Abstract">Priority
-			</label>
-
-		</div>
-		<button type="submit" class="btn btn-default">Submit</button>
-	</form>
-	<script>console.log('page loaded');</script>
+	<div ng-view></div>
+</div>
 
 </body>
 </html>
