--- a/results.html
+++ b/results.html
@@ -16,22 +16,23 @@
 		json3.appendChild(document.getElementsByTagName('head')[0]);
 	</script>
 	<![endif]-->
-	<script src="js/vendor/jquery.min.js"></script>
-	<script src="js/vendor/bootstrap.js"></script>
+	<!-- <script src="js/vendor/jquery.min.js"></script>
+	<script src="js/vendor/bootstrap.js"></script> -->
+ 	<!-- <script src="js/vendor/angular.min.js"></script>
+	<script src="js/vendor/angular-route.min.js"></script> -->
+	<script src="js/app.js"></script>
 
 </head>
-<body>
+<body ng-controller="ResultsController">
 <div class="container">
 	<div class="row">
 		<h1>You made it to the results page!</h1>
 	</div>
 	<div class="well">
-		<p>On this page you will:</p>
-		<ul>
-			<li>Tastefully display the selections the user made .</li>
-			<li>Fix the json3 and css includes for IE7.</li>
+		<p>Selected Items:</p>
+		<ul>			
+			<li ng-repeat="item in results">{{item}}</li>
 		</ul>
-
 	</div>
 </body>
 </html>
