--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html xmlns:ng="http://angularjs.org">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <title ng-bind="title"></title>
-  
-  <link rel="stylesheet" href="css/bootstrap.css"/>
-	<style>
-		h1 { color: darkred }
-		h1 { weight: bolder }
-		h1 { margin: 20px; display: block; opacity: 80%; }
-		h1:hover { opacity:1; }
-	</style>
 
-  <!--[if lte IE 7]>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title ng-bind="title"></title>
+
+    <link rel="stylesheet" href="css/bootstrap.css" />
+
+    <style>
+    h1 {
+        color: darkred
+    }
+    h1 {
+        weight: bolder
+    }
+    h1 {
+        margin: 20px;
+        display: block;
+        opacity: 80%;
+    }
+    h1:hover {
+        opacity: 1;
+    }
+    </style>
+
+    <!--[if lte IE 7]>
     <script src="js/vendor/json3.js"></script>
   <![endif]-->
 
-  <script src="js/vendor/angular.min.js"></script>
-  <script src="js/vendor/angular-route.min.js"></script>
-  <script src="js/app.js"></script>
-</head>
-<body ng-app="TestMe">
-<div class="container">
-	<div ng-view></div>
-</div>
 
+</head>
+
+<body ng-app="TestMe">
+    <div class="container">
+        <div ng-view></div>
+    </div>
+    <script src="js/vendor/angular.min.js"></script>
+    <script src="js/vendor/angular-route.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
