--- a/testForm.html
+++ b/testForm.html
@@ -1,48 +1,35 @@
 <div ng-controller="CheckBoxController">
-	<div class="row">
-		<h1>The User Interface Developer Test</h1>
-	</div>
-	<div class="well">
-		<ul>
-			<li>This Page and results.html should be converted to AngularJS templates.</li>
-			<li>Add a select-all toggle for the checkbox list.</li>
-			<li>Select-all should be checked if all fields are checked, unchecked if all fields are unchecked and indeterminate if some are checked.</li>
-			<li>Sor the checkboxes by name</li>
-			<li>When submitting the form, if only "Language" is checked, then an error should appear stating &quot; Please choose more items! &quot;</li>
-			<li>Successfully submitting the form takes us to results.html and shows what the user submitted.</li>
-			<li>Maybe the page can look a little better?</li>
-			<p>Read the README.md</p>
-		</ul>
-	</div>
-	<form role="form" ng-submit="submit()">
-		<div class="form-group">
-			<input type="checkbox" ng-model="cbSelectAll" ng-change="selectAllCheckBoxes()">Select All
-		</div>
-		<div class="form-group">
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Abstract" ng-model="cbSelectedByVal.abstract" ng-change="testSelectAll()">Abstract
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Publication" ng-model="cbSelectedByVal.publication" ng-change="testSelectAll()">Publication
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" value="Inventor" ng-model="cbSelectedByVal.inventor" ng-change="testSelectAll()">Inventor
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Language" ng-model="cbSelectedByVal.language" ng-change="testSelectAll()">Language
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="field" value="Source" ng-model="cbSelectedByVal.source" ng-change="testSelectAll()">Source
-			</label>
-			<label class="checkbox">
-				<input type="checkbox" name="fields" value="Priority" ng-model="cbSelectedByVal.priority" ng-change="testSelectAll()">Priority
-			</label>
-		</div>
-		<button type="submit" class="btn btn-default" ng-click="submit()"><a href="#results">Submit</a></button>
-	</form>
-	
-
-
-
-	<script>console.log('page loaded');</script>
+    <div class="row">
+        <h1>The User Interface Developer Test</h1>
+    </div>
+    <div class="well">
+        <ul>
+            <li>This Page and results.html should be converted to AngularJS templates.</li>
+            <li>Add a select-all toggle for the checkbox list.</li>
+            <li>Select-all should be checked if all fields are checked, unchecked if all fields are unchecked and indeterminate if some are checked.</li>
+            <li>Sor the checkboxes by name</li>
+            <li>When submitting the form, if only "Language" is checked, then an error should appear stating &quot; Please choose more items! &quot;</li>
+            <li>Successfully submitting the form takes us to results.html and shows what the user submitted.</li>
+            <li>Maybe the page can look a little better?</li>
+            <p>Read the README.md</p>
+        </ul>
+    </div>
+    <form role="form" ng-submit="submit()">
+        <div class="form-group">
+            <input type="checkbox" ng-model="cbSelectAll" ng-change="selectAllCheckBoxes()" id="selectAllChkBox">Select All
+        </div>
+        <div class="form-group col-md-6">
+            <div ng-repeat-start="item in getKeys(cbSelectedByVal)| orderBy:item">
+                <input type="checkbox" name="fields" value="{{item}}" ng-model="cbSelectedByVal[item]" ng-change="testSelectAll()">
+                <label>
+                    {{item}}
+                </label>
+            </div>
+            <div ng-repeat-end></div>
+            <button type="submit" class="btn btn-primary" ng-click="submit()">Submit</button>    
+        </div>
+    </form>
+    <script>
+    console.log('page loaded');
+    </script>
 </div>
